# gdpr-compliance-auditor

./: Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.json
server/: app.py  env.py
