[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdpr-compliance-auditor"
version = "0.1.0"
description = "GDPR Data Privacy Auditor Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[project.scripts]
server = "server.app:main"